environments/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-stable
  namespace: dev
spec:
  selector:
    app: rollouts-demo
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: dev
spec:
  selector:
    app: rollouts-demo
  ports:
  - port: 80
    targetPort: 8080
